--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.main {
+  height: 94vh;
+  width: 100%;
+  font-family: sans-serif;
+}
+
+footer {
+  height: 6vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  color: #fff;
+  font-family: sans-serif;
+  background-color: #000000;
+  z-index: 1;
+}
+
+footer i {
+  color: #fff;
+}
