--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,54 @@
   height: 94vh;
   width: 100%;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
+.score-board {
+  font-size: 1.5rem;
+  display: flex;
+  gap: 20px;
+}
+
+.user-score,
+.cpu-score {
+  font-weight: 900;
+}
+
+.choice {
+  width: 5.5rem;
+  font-size: 1.2rem;
+  padding: 5px 0px;
+  margin: 0px 10px;
+}
+
+.game-data {
+  height: 300px;
+}
+
+.winner,
+.btn-container {
+  text-align: center;
+}
+
+.winner {
+  margin-top: 10px;
+}
+
+.btn-container button {
+  width: 4.5rem;
+  font-size: 1rem;
+  padding: 5px 0px;
+  margin-top: 5px;
+}
 footer {
   height: 6vh;
   display: flex;
